--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "openai": "^6.9.1",
     "vite": "latest"
-  },
-  "devDependencies": {}
+  }
 }
